New Development: No             JIRA Issue: No         Ready for Test: Yes      Interface Changes: No          Test Programs: make & make install   Put in Release Notes: No              Module(s): none            Description: Modified Makefile-s so that libatnf.so is installed at the time of "make install" instead of "make"

--- a/external-alma/Makefile
+++ b/external-alma/Makefile
@@ -130,7 +130,7 @@ HEADERS := $(ATNFDIR)/pks/pks_maths.h \
 
 .PHONY : all clean objects realclean install
 
-all : $(TARGETLIB) install
+all : $(TARGETLIB)
 
 objects : $(OBJECTS)
 
