New Development: No             JIRA Issue: No (related to merge)         Ready for Test: Yes      Interface Changes: No          Test Programs: build asap with make   Put in Release Notes: No              Module(s): asap build system            Description: a bug fix for platform detection

--- a/external-alma/Makefile
+++ b/external-alma/Makefile
@@ -25,7 +25,7 @@ CASALIB   := $(CASAROOT)/$(CASAARCH)/lib
 CASALIB   := $(CASAROOT)/$(CASAARCH)/lib
 #USELIB := lib64
 
-ifeq ("",$(findstring "darwin", "$(CASAARCH)"))
+ifneq (,$(findstring "darwin", "$(CASAARCH)"))
 	TARGETLIB   := libatnf.dylib
 else
         TARGETLIB   := libatnf.so
@@ -52,7 +52,7 @@ RPFITSLIB := -lrpfits
 LD        := $(CXX)
 
 LDFLAGS   += -shared
-ifeq ("", $(findstring "darwin", "$(CASAARCH)"))
+ifneq (, $(findstring "darwin", "$(CASAARCH)"))
 	   LDFLAGS += -headerpad_max_install_names -install_name $(CASAROOT)/$(CASAARCH)/lib/$(TARGETLIB)
 endif 
 
