--- a/src/Makefile
+++ b/src/Makefile
@@ -44,6 +44,7 @@ endif
 
 # compiler flags
 CXXFLAGS += -fPIC
+#CXXOPTS += -DHAVE_LIBPYRAP
 
 CFITSIOLIB := -lcfitsio
 
@@ -53,8 +54,14 @@ RPFITSLIB := -lrpfits
 G2CROOT := /usr
 G2CLIB := -lgfortran
 
+# pyrap
+PYRAPD := $(ASAPROOT)/external/libpyrap
+PYRAPLIBD := $(PYRAPD)
+PYRAPINCD := $(PYRAPD)/pyrap-0.3.2
+PYRAPLIB := -L$(PYRAPLIBD) -lpyrap
+
 # links to external libraries
-CASAPPLIB := -L$(ASAPROOT)/$(ATNFD) -latnf $(CORELIB) \
+CASAPPLIB := -L$(ASAPROOT)/$(ATNFD) -latnf $(CORELIB) $(PYRAPLIB) \
              -L$(WCSLIBLIBD) $(WCSLIBLIB) \
              -L$(RPFITSLIBD) $(RPFITSLIB) $(CFITSIOLIB) $(G2CLIB) -lstdc++
 
@@ -75,7 +82,7 @@ LDFLAGS   += -shared
 
 
 # DO NOT MODIFY AFTER THIS
-INCDIRS   := -I. $(CASAINC)  -I$(CFITSIOINCD) $(BOOSTINC) -I$(PYTHONINCD) -I$(ASAPROOT)/$(ATNFD)
+INCDIRS   := -I. $(CASAINC)  -I$(CFITSIOINCD) $(BOOSTINC) -I$(PYTHONINCD) -I$(ASAPROOT)/$(ATNFD) -I$(PYRAPINCD)
 LIBS      := $(PYTHONLIB)  $(BOOSTLIB) $(CASAPPLIB)
 
 CCOBJECTS := MathUtils.o \
