New Development: No             JIRA Issue: No         Ready for Test: Yes      Interface Changes: No What Interface Changed: Please list interface changes          Test Programs: List test programs   Put in Release Notes: Yes/No              Module(s): Module Names change impacts.            Description: Describe your changes here...
Fixed typo in library extension for test

--- a/external/libpyrap/Makefile
+++ b/external/libpyrap/Makefile
@@ -18,7 +18,7 @@ CASAARCH := $(word 2, $(CASAPATH))
 
 ifeq ($(shell uname), Darwin)
    TARGET := libpyrap.dylib
-   TESTMOD := $(TESTDIR)/_tConvert.so
+   TESTMOD := $(TESTDIR)/_tConvert.dylib
 else
    TARGET := libpyrap.so
    TESTMOD := $(TESTDIR)/_tConvert.so
